tests/negative/ffi_const_write_strict.urb
use strict,
s = { a = "const int32" },
p = memory.new(s),
v = memory.view(p, s),
v.a = 1,
